--- a/src/Components/Footer/footer.html
+++ b/src/Components/Footer/footer.html
@@ -107,12 +107,12 @@
         <div
           class="w-full md:w-1/3 flex flex-col items-center md:items-start text-center md:text-left"
         >
-          <img
+         <!-- <img
             src="/src/assets/Images/HomePage/Hero/logo.png"
             alt="Theliveosoft logo"
             class="w-60 h-30 mb-2"
           />
-          <p class="text-sm font-bold text-yellow-400 mb-2">ESTD 2024</p>
+          <p class="text-sm font-bold text-yellow-400 mb-2">ESTD 2024</p> -->
           <h2 class="text-2xl font-bold mb-4 text-white">Liveosoft Technologies Pvt. Ltd.</h2>
           <p class="text-white mb-6">
             Empowering agriculture and hospitality through innovative technology
